@@ -1,32 +1,17 @@
 #!/usr/bin/make -f
 
-PYTHONS:=$(shell pyversions -vr)
-PYTHON3S:=$(shell py3versions -vr)
-
 include /usr/share/openstack-pkg-tools/pkgos.make
-
-export OSLO_PACKAGE_VERSION=$(VERSION)
 
 %:
 	dh $@ --buildsystem=python_distutils --with python2,python3
 
-override_dh_install:
-	set -e ; for pyvers in $(PYTHONS); do \
-		python$$pyvers setup.py install --install-layout=deb \
-			--root $(CURDIR)/debian/python-zaqarclient; \
-	done
-	set -e ; for pyvers in $(PYTHON3S); do \
-		python$$pyvers setup.py install --install-layout=deb \
-			--root $(CURDIR)/debian/python3-zaqarclient; \
-	done
-	rm -rf $(CURDIR)/debian/python*/usr/lib/python*/dist-packages/*.pth
+override_dh_auto_install:
+	pkgos-dh_auto_install
 
 override_dh_auto_test:
 ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-	# NOTE(jamespage): Skip unittests, they require fully entry point setup
-	#				   execution provided by DEP-8 instead.
+	echo "NOTE(jamespage): Skip unittests, they require fully entry point setup: execution provided by DEP-8 instead."
 endif
-
 
 override_dh_clean:
 	dh_clean -O--buildsystem=python_distutils
